k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-calculator
spec:
  selector:
    app: python-calculator

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
